# ratatui

./: AGENTS_AS_APPS.md  Cargo.toml
.github/workflows/: ci.yml
docs/: TERNARY_STATE.md
examples/apps/agent-dashboard/: Cargo.toml
examples/apps/agent-dashboard/src/: main.rs
examples/apps/release-header/src/: main.rs
guardian/: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  PRODUCTION_LOG.md  README.md  architecture.md
guardian/.github/workflows/: ci.yml
guardian/examples/: full_demo.rs  minimal.rs
guardian/src/: budget.rs  detector.rs  error.rs  lib.rs  profiler.rs  ratatui_adapter.rs  report.rs  reporter.rs
ratatui/: Cargo.toml
